kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  labels:
    app: homework
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
              claimName: homework-claim
        - name: nginx-default-config-volume
          configMap:
            name: nginx-default-config-homework
            items:
              - key: default.conf
                path: default.conf
        - name: nginx-custom-config-volume
          configMap:
            name: homework-volumes-cm
      terminationGracePeriodSeconds: 4
      nodeSelector:
        homework: "true"
      containers:
        - name: nginx-container
          image: nginx
          volumeMounts:
            - mountPath: /homework
              name: shared-volume
            - mountPath: /homework/conf
              name: nginx-custom-config-volume
            - name: nginx-default-config-volume
              mountPath: /etc/nginx/conf.d/
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /index.html
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm -f /homework"]
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
